src/objects/SPE_TrackerValues__c.object
<CustomObject>
    <fields>
        <fullName>Avg_Piller_Score__c</fullName>
        <label>Avg Pillar Score</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <formula>TEXT(SPETracker__r.BusinessLine__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BusinessLine</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <formula>Text(SPETracker__r.BusinessUnit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BusinessUnit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <formula>SPETracker__r.Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <formula>SPETracker__r.CategoryCluster__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>SPETracker__r.Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataLogic__c</fullName>
        <label>Data Logic</label>
        <picklist>
            <picklistValues>
                <fullName>Actual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Derived</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assumed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indicator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DateOfExecution__c</fullName>
        <formula>SPETracker__r.DateOfExecution__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateOfExecution</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EncryptedEnterpriseId__c</fullName>
        <encrypted>true</encrypted>
        <label>Enterprise ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnterpriseId__c</fullName>
        <formula>&apos;True&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enterprise ID DeprecatedDoNotUse</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <formula>TEXT(KPIDefinition__r.Group1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPIDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KPI Definition</label>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipLabel>Tracker Value</relationshipLabel>
        <relationshipName>Tracker_Value</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KPIGroup__c</fullName>
        <label>Group</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogicAnnotation__c</fullName>
        <label>Logic Annotation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAX_Piller_score__c</fullName>
        <label>MAX Pillar score</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Piller_Score__c</fullName>
        <label>Min Pillar Score</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MissingDatalogic__c</fullName>
        <label>Missing Data logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentile__c</fullName>
        <formula>IF(Score__c  == 0, 0,(( Score__c )/ 5 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentile</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pillar_Rank__c</fullName>
        <label>Pillar Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Piller__c</fullName>
        <formula>TEXT(KPIDefinition__r.Group1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pillar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Piller_score__c</fullName>
        <formula>( Vlauecalculation__c/ Sumofpillerweight__c)*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pillar score</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>SPETracker__r.Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <formula>SPETracker__r.Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>SPETracker__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPEPlanId__c</fullName>
        <formula>SPETracker__r.SPEPlan__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPE Plan Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPETemplate__c</fullName>
        <formula>CASESAFEID(SPETracker__r.SPETemplate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPE Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPETracker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPE Tracker</label>
        <referenceTo>SPE_SPETracker__c</referenceTo>
        <relationshipLabel>Tracker Value</relationshipLabel>
        <relationshipName>Tracker_Value</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SPE_Rank__c</fullName>
        <label>SPE Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPE_Score__c</fullName>
        <label>SPE Score</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPE_TemplateName__c</fullName>
        <formula>SPETracker__r.SPETemplate__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPE Template Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score1__c</fullName>
        <label>Score1</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScoreResult__c</fullName>
        <formula>If(Score__c == 1.00,&apos;Un accepatble&apos;,IF(Score__c == 2.00, &apos;NI&apos; ,IF(Score__c == 3.00, &apos;Meets req.&apos;, IF(Score__c == 4.00, &apos;Good&apos;,&apos;&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_1_Lower_Bound__c</fullName>
        <label>Score 1 Lower Bound</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_1_Upper_Bound__c</fullName>
        <label>Score 1 Upper Bound</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_2_Lower_Bound__c</fullName>
        <label>Score 2 Lower Bound</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_2_Upper_Bound__c</fullName>
        <label>Score 2 Upper Bound</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_3_Loewr_Bound__c</fullName>
        <label>Score 3 Loewr Bound</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_3_Upper_Bound__c</fullName>
        <label>Score 3 Upper Bound</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_4_Lower_Bound__c</fullName>
        <label>Score 4 Lower Bound</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SpendWeightageScore__c</fullName>
        <formula>Spend__c  *  Score1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spend Weightage Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spend__c</fullName>
        <label>Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SubRegion__c</fullName>
        <formula>SPETracker__r.SubRegion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sumofpillerweight__c</fullName>
        <label>Sumofpillerweight</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tracker Value</relationshipLabel>
        <relationshipName>Tracker_Value</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SurveyComments__c</fullName>
        <label>Survey Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vlauecalculation__c</fullName>
        <label>Vlauecalculation</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WeightageScore__c</fullName>
        <formula>Score1__c * Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weightage Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>categorygroup__c</fullName>
        <formula>SPETracker__r.CategoryGroup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>categorygroup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salesforceid__c</fullName>
        <formula>Supplier__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SalesforceEnterprise ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>test</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>value1__c</fullName>
        <formula>(Score1__c)*( Weight__c/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>value1</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Tracker Value</label>
    <nameField>
        <displayFormat>Tracker-{00000}</displayFormat>
        <label>Tracker Values Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracker Value</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>